# data-logger

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
client/embassy/: Cargo.toml
client/embassy/src/: main.rs
client/lib/: main.dart
dart/: pubspec.yaml
doc/: book.toml
doc/src/: SUMMARY.md  getting_started.md  hardware.md  nrf.md  setup.md
doc/src/hardware/: particle-xenon.md  xiao-nrf.md
doc/src/hardware/figures/xiao-pad-positioning/: Seeed XIAO nRF52840 v1.0 Bottom Key coordinates .xls  Seeed XIAO nRF52840 v1.0 Dimensioning.dxf
embed-template/: Cargo.toml  build.rs  memory_microbit_v2.x
embed-template/src/: main.rs  sample_task.rs
embed-template/src/ble/: init.rs
host/: Cargo.toml
host/embassy/: Cargo.toml
host/embassy/src/: main.rs
host/littlefs/: Cargo.toml
host/littlefs/src/: main.rs
host/msgpack/: Cargo.toml
host/msgpack/src/: main.rs
host/src/: main.rs
host/state/: Cargo.toml
host/state/src/: main.rs  main2.rs
host/tokio/: Cargo.toml
host/tokio/src/: main.rs
lib/: Cargo.toml
lib/examples/: attributes.rs  filter.rs  msgpack.rs  state.rs
lib/src/: comm.rs  lib.rs  msg.rs  state_filter.rs  state_types.rs  timestamp.rs
logger/: Cargo.toml  memory_particle_xenon.x
logger-lib/: Cargo.toml
logger-lib/src/: comm.rs  lib.rs  state_types.rs
logger/.cargo/: config.toml
logger/src/: comm.rs  event_logger.rs  gps.rs  imu.rs  main.rs
logger/src/ble/: mod.rs  scanner.rs
logger/src/boards/: microbit_v2.rs  particle_xenon.rs
nus/: Cargo.toml  memory_particle_xenon.x
nus/src/: comm.rs  main.rs  states.rs
nus/src/ble/: advertisement.rs  battery_service.rs  config.rs  govee.rs  mod.rs  nus.rs  nus_service.rs  scanner.rs  setup.rs  x.rs
server/: Cargo.toml  memory_particle_xenon.x
server/.cargo/: config.toml
server/src/: ble.rs  flash.rs  gps.rs  imu.rs  main.rs
server/src/ble/: scanner.rs
server/src/boards/: microbit_v2.rs  mod.rs  particle_xenon.rs  xiao_sense.rs
server/src/flash/: storage.rs
