[package]
authors = ["Bernhard Boser"]
edition = "2021"
name = "logger-lib"
version = "0.1.0"

[dependencies]
defmt = { version = "0.3", optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["nightly"] }

heapless = "0.7"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
embedded-crc-macros = "1.0"