[package]
authors = ["Bernhard Boser"]
edition = "2021"
name = "logger-lib"
version = "0.1.0"

[dependencies]
defmt = { version = "0.3", optional = true }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
no-std-compat = { version = "0.4", features = [ "alloc" ] }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
embedded-crc-macros = "1.0"
serde = { version = "1.0", features = ["derive"] }
heapless = "0.7"

embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["nightly"] }

[features]
default = [ "std" ] # Default to using the std
std = [ "no-std-compat/std" ]