[package]
authors = ["Bernhard Boser"]
edition = "2021"
name = "logger-lib"
version = "0.1.0"

[dependencies]
defmt = "0.3"
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "nightly"] }
embassy-sync = "0.1"
static_cell = "1.0"