[package]
authors = ["iot49"]
edition = "2021"
readme = "README.md"
name = "logger"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6,<0.8"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "integrated-timers", "nightly"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "nightly"] }
embassy-sync = "0.1"
embedded-hal = "0.2"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "1.0"

##################################################################################
# TODO: enable correct architecture for nrf52833
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }

logger-lib = { path = "../logger-lib" }

[[bin]]
name = "logger"
test = false
bench = false
doc = true

[features]
default = [
    "particle-xenon"
]

particle-xenon = ["embassy-nrf/nrf52840"]
microbit-v2 = ["embassy-nrf/nrf52833"]

# make dev same as --release
[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
