[package]
authors = ["iot49"]
edition = "2021"
readme = "README.md"
name = "logger"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.4"    
cortex-m = { version = "0.7" } #, features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6,<0.8"
defmt = "0.3"
defmt-rtt = "0.4"

embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
embassy-sync = { version = "0.1.0", path = "../embassy/embassy-sync", features = ["log"] }
embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = ["log", "std", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["log", "std", "nightly"] }
embassy-net = { version = "0.1.0", path = "../embassy/embassy-net", features=[ "std", "nightly", "log", "medium-ethernet", "tcp", "udp", "dhcpv4"] }
embassy-net-driver = { version = "0.1.0", path = "../embassy/embassy-net-driver" }

embedded-hal = "0.2"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "1.0"
bno055 = "0.3"

##################################################################################
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = ["defmt", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }

logger-lib = { path = "../logger-lib" }

[[bin]]
name = "logger"
test = false
bench = false
doc = true

[features]
default = [
    "particle-xenon",
    # "use-heap"
]

use-heap       = []
particle-xenon = ["embassy-nrf/nrf52840", "nrf-softdevice/nrf52840"]
microbit-v2    = ["embassy-nrf/nrf52833", "nrf-softdevice/nrf52833"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-