[package]
authors = ["iot49"]
edition = "2021"
readme = "README.md"
name = "data-logger"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.4"    
cortex-m = { version = "0.7" } #, features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6,<0.8"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "0.2"
embedded-hal-async = "0.2.0-alpha.0"
futures = { version = "0.3", default-features = false, features = ["async-await"] }

# embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "integrated-timers", "nightly"] }
# embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "b6c8505697f198b95545f352f6a94af24276b128", features = ["defmt", "nightly"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "c21cc21c622de5527668671c61f677baf7924cf3", features = ["defmt", "integrated-timers", "nightly"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "c21cc21c622de5527668671c61f677baf7924cf3", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "c21cc21c622de5527668671c61f677baf7924cf3", features = ["defmt", "nightly"] }
embassy-sync = "0.1"
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = ["defmt", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }

static_cell = "1.0"
bno055 = "0.3"

logger-lib = { path = "../logger-lib", features = ["defmt"] }


[[bin]]
name = "data-logger"
test = false
bench = false
doc = true

[features]
default = ["particle-xenon"]

use-heap       = []
particle-xenon = ["embassy-nrf/nrf52840", "nrf-softdevice/nrf52840"]
microbit-v2    = ["embassy-nrf/nrf52833", "nrf-softdevice/nrf52833"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
